--- a/languages/donate-product-host-hr.po
+++ b/languages/donate-product-host-hr.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Donate Product Host\n"
-"POT-Creation-Date: 2024-08-10 15:03+0200\n"
-"PO-Revision-Date: 2024-08-10 15:05+0200\n"
+"POT-Creation-Date: 2024-08-10 22:48+0200\n"
+"PO-Revision-Date: 2024-08-10 22:50+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: hr\n"
@@ -14,6 +14,7 @@ msgstr ""
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: donate-product-host.php\n"
+"X-Poedit-SearchPath-1: dph-donation-product-ajax.js\n"
 
 #: donate-product-host.php:72 donate-product-host.php:101
 msgid "Donate Product Host"
@@ -331,6 +332,10 @@ msgstr "Kopiraj"
 msgid "Send"
 msgstr "Pošalji"
 
+#: donate-product-host.php:467
+msgid "Archive"
+msgstr "Arhiviraj"
+
 #: donate-product-host.php:473
 msgid "No campaigns found."
 msgstr "Nema pronađenih kampanja."
@@ -351,9 +356,37 @@ msgstr "Poruka je uspješno poslana"
 msgid "Failed to send email"
 msgstr "Nije uspjelo slanje poruke"
 
+#: donate-product-host.php:618
+msgid "Unarchive"
+msgstr "Odarhiviraj"
+
 #: donate-product-host.php:624
 msgid "No archived campaigns found."
 msgstr "Nema pronađenih arhiviranih kampanja."
+
+#: dph-donation-product-ajax.js:4
+msgid "Are you sure you want to archive this campaign?"
+msgstr "Sigurno li želite arhivirati kampanju?"
+
+#: dph-donation-product-ajax.js:14
+msgid "Campaign archived successfully."
+msgstr "Kampanja je uspješno arhivirana."
+
+#: dph-donation-product-ajax.js:17
+msgid "Failed to archive the campaign."
+msgstr "Neuspješno arhiviranje."
+
+#: dph-donation-product-ajax.js:25
+msgid "Are you sure you want to unarchive this campaign?"
+msgstr "Sigurno li želite odarhivirati kampanju?"
+
+#: dph-donation-product-ajax.js:35
+msgid "Campaign unarchived successfully."
+msgstr "Kampanja je uspješno odarhivirana."
+
+#: dph-donation-product-ajax.js:38
+msgid "Failed to unarchive the campaign."
+msgstr "Neuspješno odarhiviranje."
 
 #~ msgid "Client key copied to clipboard"
 #~ msgstr "Klijentski ključ je kopiran u memoriju"
